Fix page headings on mobile

--- a/src/ContentWrapper.css
+++ b/src/ContentWrapper.css
@@ -12,6 +12,10 @@
   justify-content: space-between;
 }
 
+.content-heading-wrapper {
+  padding: 0 40px;
+}
+
 .content-heading {
   margin-bottom: 1.5rem;
 }
